tests/ui/rfc-2632-const-trait-impl/const-impl-requires-const-trait.stderr
error: const `impl` for trait `A` which is not marked with `#[const_trait]`
  --> $DIR/const-impl-requires-const-trait.rs:6:12
   |
LL | pub trait A {}
   | - help: mark `A` as const: `#[const_trait]`
...
LL | impl const A for () {}
   |            ^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to previous error

